# winterthur

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  code-smells.md  pyproject.toml  session-summary.md  test.ps1
docs/: plan-pascal-support.md
src/pascalparser/: __init__.py  __main__.py  cli.py  metrics_walker.py  parser.py  special_handlers.py
src/pascalparser/commands/: __init__.py  consts.py  declaration.py  doctor.py  metrics.py  parse.py  smells.py  symbols.py
src/pascalparser/queries/: go.scm  python.scm
src/winterthur/: __init__.py  __main__.py  cli.py  io_helpers.py  metrics_walker.py  models.py  parser.py  smells_walker.py
src/winterthur/commands/: __init__.py  consts.py  declaration.py  doctor.py  metrics.py  parse.py  smells.py  symbols.py
src/winterthur/queries/: c.scm  cpp.scm  java.scm  javascript.scm  pascal.scm  rust.scm  typescript.scm
src/winterthur/smells/: __init__.py  base.py  pascal.py  python.py  registry.py  typescript.py
src/winterthur/walkers/: __init__.py  base.py  pascal.py  python.py  registry.py  typescript.py
tests/unit/: test_metrics.py  test_metrics_walker.py  test_metrics_walker_python.py  test_metrics_walker_typescript.py  test_parser.py  test_smells.py  test_smells_gexperts.py  test_smells_pascal_phase2.py  test_smells_python.py  test_smells_typescript.py
