[project]
name = "pascalparser"
version = "0.1.0"
description = "Pascal/Delphi parser, lint and metrics tooling. Single-unit-of-compilation scanning via tree-sitter (no .dproj, no compile)."
requires-python = ">=3.11"
authors = [
    { name = "Warren Postma" },
]
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "tree-sitter>=0.23,<1",
    "tree-sitter-pascal>=0.9,<1",
    "tree-sitter-python>=0.23,<1",
    "tree-sitter-typescript>=0.23,<1",
    "tree-sitter-javascript>=0.23,<1",
    "tree-sitter-go>=0.23,<1",
    "tree-sitter-rust>=0.23,<1",
    "tree-sitter-java>=0.23,<1",
    "tree-sitter-cpp>=0.23,<1",
    "structlog>=24,<25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-snapshot>=0.9,<1",
    "ruff>=0.6",
]

[project.scripts]
pascalparser = "pascalparser.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pascalparser"]

[tool.hatch.build.targets.wheel.force-include]
"src/pascalparser/queries" = "pascalparser/queries"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]
